[package]
name = "runcc"
version = "1.1.0" # replace version
description = "run commands concurrently with rust and cargo"
license = "MIT"
edition = "2018"
authors = [
    "Equal Ma <equalma@outlook.com>",
]
homepage = "https://github.com/runcc-rs/runcc"
repository = "https://github.com/runcc-rs/runcc"
categories = [
    "command-line-utilities",
    "development-tools::cargo-plugins",
    "concurrency",
]
keywords = [
    "concurrent",
    "parallel",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1"
serde_json = "1"
serde_yaml = "0.8"
toml = "0.5"
ron = "0.6"
tokio = { version = "1", features = ["process", "macros", "rt", "sync", "signal", "io-util", "rt-multi-thread"] }
clap = { version = "3.0.0-beta.4", optional = true }
regex = { version = "1", optional = true }
lazy_static = { version = "1", optional = true }

[target.'cfg(windows)'.dependencies]
rand = "0.8"

[features]
default = ["cli", "auto_ansi_escape"]
cli = ["clap"]
auto_ansi_escape = ["regex", "lazy_static"]

[[bin]]
name = "cargo-runcc"
required-features = ["cli"]
